# cpp-collaborative-editor

./: CMakeLists.txt  README.md  gitignore
src/: CMakeLists.txt  editor_client.cpp  editor_server.cpp  editor_server.hpp  main.cpp
